--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -25,8 +25,9 @@ json = "^0.12.4"
 serde = {version = "^1.0.147", features = ["derive"]}
 serde_json="^1.0.88"
 num = "^0.4.1"
+csv = "^1.2.2"
 #r_stats = { git = "https://github.com/derekdreery/r_stats.git"}
-#r_stats = { git = "https://github.com/robinpaul85/r_stats.git"}
+r_stats = { git = "https://github.com/robinpaul85/r_stats.git"}
 
 
 [profile.release]
@@ -63,6 +64,10 @@ path="src/sv.rs"
 name="cluster"
 path="src/cluster.rs"
 
-#[[bin]]
-#name="wilcoxon"
-#path="src/wilcoxon.rs"
+[[bin]]
+name="wilcoxon"
+path="src/wilcoxon.rs"
+
+[[bin]]
+name="expression"
+path="src/expression.rs"
