--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -26,8 +26,7 @@ serde = {version = "^1.0.147", features = ["derive"]}
 serde_json="^1.0.88"
 num = "^0.4.1"
 csv = "^1.2.2"
-#r_stats = { git = "https://github.com/derekdreery/r_stats.git"}
-r_stats = { git = "https://github.com/robinpaul85/r_stats.git"}
+r_mathlib="^0.2.0"
 
 
 [profile.release]
