temporarily comment out `type: module` in rx/package.json to fix the tsc transpilation error

--- a/client/rx/package.json
+++ b/client/rx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sjcrh/rx",
-  "type": "module",
+  "//type": "module",
   "version": "0.0.0",
   "description": "a minimal reactive framework for managing application state, inspired by React/Redux and Vue",
   "main": "index.js",
