--- a/.github/workflows/CI-unit.yml
+++ b/.github/workflows/CI-unit.yml
@@ -66,6 +66,11 @@ jobs:
           sudo apt-get install xvfb
           xvfb-run --auto-servernum npm run test:unit --workspace="client"
 
+      - name: 🔎 Run augen tests
+        if: contains(env.WS_TO_TEST, 'augen')
+        run: |
+          npm test --workspace="augen"
+
       - name: 🔎 Server unit tests
         if: contains(env.WS_TO_TEST, 'server')
         run: npm run test:unit --workspace="server"
