--- a/server/package.json
+++ b/server/package.json
@@ -71,6 +71,7 @@
     "jsonwebtoken": "^9.0.0",
     "jstat": "^1.9.3",
     "lazy": "^1.0.11",
+    "micromatch": "^4.0.5",
     "minimatch": "^3.1.2",
     "node-fetch": "^2.6.1",
     "partjson": "^0.58.1",
