--- a/.github/workflows/CI-integration.yml
+++ b/.github/workflows/CI-integration.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     if: github.event.pull_request.draft == false
-    runs-on: ubuntu-19.10
+    runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
       - name: Check secret
@@ -47,7 +47,6 @@ jobs:
 
       - name: Install PP packages
         run: |
-          rustup toolchain list
           npm ci
           cd rust && npm run build
 
