--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "target": "es2016"
   },
   "include": ["./**/*.ts"]
 }
