--- a/container/full/Dockerfile
+++ b/container/full/Dockerfile
@@ -1,7 +1,7 @@
 # Default to Docker Hub, but enable the base image to be pulled from a
 # different registry by setting the registry arg at build time.
 ARG registry=docker.io/library
-ARG VERSION=2.22.1
+ARG VERSION=2.27.2-4ab805b
 
 #########################
 # Full app update
