--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "examples": "node ./test/import-specs.js name=_x_.examples && npm run tape",
     "rollw": "rm -rf dist && rollup -c ./rollup.config.js -w --bundleConfigAsCjs",
     "build": "rm -rf dist && rollup -c ./rollup.config.js",
-    "prepack": "rm -rf dist && rollup -c ./rollup.config.js"
+    "prepack": "rm -rf dist && rollup -c ./rollup.config.js && npm run sedver",
+    "sedver": "node -p \"Object.values($(npm pkg get version))[0]\" | sed -i '' \"s|___current-proteinpaint-client-version___|$(</dev/stdin)|\" dist/app*.js"
   },
   "author": "",
   "license": "SEE LICENSE IN ./LICENSE",
