Reorder release type options for Create Release Action.

--- a/.github/workflows/CD-create-release.yml
+++ b/.github/workflows/CD-create-release.yml
@@ -7,12 +7,14 @@ on:
         type: choice
         description: Release type
         options:
-          - prerelease
+          - patch
+          - minor
+          - major
           - prepatch
           - preminor
           - premajor
-          - minor
-          - patch
+          - prerelease
+
       include:
         type: choice
         description: Include
