--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ public/docs/server-api.json
 container/public/example*
 container/dataset/*
 container/**/pkg.json
+container/ci-run.sh
 
 **/rust/*.lock
 **/rust/target/*
