trigger the unit testing before bundling

--- a/.github/workflows/CD-release-packages.yml
+++ b/.github/workflows/CD-release-packages.yml
@@ -21,7 +21,12 @@ on:
         description: Build secret
 
 jobs:
+  unit_test:
+    uses: ./.github/workflows/CI-unit.yml
+    secrets: inherit # pragma: allowlist secret
+
   build:
+    needs: [unit_test]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -67,7 +72,7 @@ jobs:
           node-version: '16'
           registry-url: 'https://registry.npmjs.org'
           scope: '@sjcrh'
-          
+
       - name: ⚡ Cache
         uses: actions/cache@v2
         with:
