--- a/.github/workflows/CI-integration.yml
+++ b/.github/workflows/CI-integration.yml
@@ -39,6 +39,8 @@ jobs:
           fi
 
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 10
 
       - uses: actions/setup-node@v3
         with:
