omit the installation of dev deps when reusing the base deps image

--- a/container/full/Dockerfile
+++ b/container/full/Dockerfile
@@ -21,7 +21,7 @@ WORKDIR /home/root/pp/app/active
 # the build script/cmd must be called from the proteinpaint/container dir
 COPY ./full/package.json .
 
-RUN npm install
+RUN npm install --omit=dev
 COPY ./full/app-full.js .
 COPY ./public .
 
