--- a/.github/workflows/CI-integration.yml
+++ b/.github/workflows/CI-integration.yml
@@ -39,6 +39,8 @@ jobs:
           fi
 
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 10
 
       - uses: actions/setup-node@v3
         with:
@@ -48,7 +50,6 @@ jobs:
       - name: Install PP packages
         run: |
           npm ci
-          cd rust && npm run build
 
       - name: Copy serverconfig.json to root
         run: |
@@ -57,7 +58,7 @@ jobs:
       - name: Create cache folder
         run: mkdir cache
 
-      - name: install xvfb
+      - name: Install xvfb
         run: sudo apt-get install xvfb
 
       - name: TSC
@@ -68,12 +69,38 @@ jobs:
           mkdir -p container/dataset
           cp server/dataset/termdb.test.js container/dataset
 
+      - name: Login to Github
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PAT }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Pack Tarballs
+        run: |
+          cd ./container
+          ./pack.sh
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./container/
+          file: ./container/server/Dockerfile
+          tags: ppserver:latest
+          platforms: linux/amd64
+          outputs: type=docker
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
       - name: Run local server and integration tests
         run: |
-          cd container
-          cp ci/ci-run.sh .
-          ./ci-run.sh
-          sleep 10 
+          cd ./container
+          ./run.sh ppserver:latest
+          sleep 10
+          cd ..
           xvfb-run --auto-servernum npm run test:integration-ci
 
       - name: Get current time
