--- a/container/full/Dockerfile
+++ b/container/full/Dockerfile
@@ -19,9 +19,9 @@ WORKDIR /home/root/pp
 COPY ./tmppack ./tmppack
 WORKDIR /home/root/pp/app/active
 # the build script/cmd must be called from the proteinpaint/container dir
-COPY ./full/package.json .
-
-RUN npm install --omit=dev
+RUN cp -r ~/.npm /home/root/ && npm i --package-lock-only
+COPY ./full/package.json  ./
+RUN npm install --omit=dev --prefer-offline
 COPY ./full/app-full.js .
 COPY ./public .
 
