--- a/.github/workflows/CD-publish-app-image.yml
+++ b/.github/workflows/CD-publish-app-image.yml
@@ -1,17 +1,15 @@
-name: "Release Packages"
+name: "Publish Application Image"
 
 on:
   push:
     branches:
-      - pkg-release
-      - fake-release
+      - image
+      - fake-image
     paths-ignore:
       - '**.md'
       - '**.txt'
       - '.**ignore'
       - 'docs/**'
-      # TODO: what if package.dependencies, files were updated?
-      # this is meant to avoid triggering the on.push event for the version bump
       - '**package*.json'
 
   workflow_dispatch:
@@ -21,16 +19,7 @@ on:
         description: Build secret
 
 jobs:
-  unit_test:
-    uses: ./.github/workflows/CI-unit.yml
-    secrets: inherit # pragma: allowlist secret
-
-  integration_test:
-    uses: ./.github/workflows/CI-integration.yml
-    secrets: inherit # pragma: allowlist secret
-
   build:
-    needs: [unit_test, integration_test]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -46,7 +35,7 @@ jobs:
           fi 
 
       - name: Check user permission
-        if: github.event_name == 'workflow_dispatch'
+        if: github.event_name == "workflow_dispatch"
         id: check
         uses: scherermichael-oss/action-has-permission@master
         with:
@@ -55,7 +44,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Exit if user doesn't have write permission
-        if: github.event_name == 'workflow_dispatch'
+        if: github.event_name == "workflow_dispatch"
         run: |
           if [ "${{ steps.check.outputs.has-permission }}" = "false" ]; then
             echo "Only users with write permission are allowed to execute this workflow."
@@ -76,46 +65,37 @@ jobs:
           node-version: '16'
           registry-url: 'https://registry.npmjs.org'
           scope: '@sjcrh'
-
-      - name: ⚡ Cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: ${{ runner.OS }}-npm-cache-
-
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
       - name: Run version bump
         run: |
-          VERTYPE=prerelease # default
+          VERTYPE=prerelease
           NOTES=$(node ./build/changeLogGenerator.js -u)
           if [[ "$NOTES" == *"Features:"* ]]; then
             VERTYPE=minor
           elif [[ "$NOTES" == *"Fixes:"* ]]; then
             VERTYPE=patch
           fi
-          . ./build/ci-version-update.sh $VERTYPE -w -x=container
+          . ./build/ci-version-update.sh $VERTYPE -w
+          # !!! --- merge back to master --- !!!
 
-      - name: Publish packages
+      - name: Login to GitHub Container Registry
         run: |
-          BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          if [[ "$BRANCH" != "pkg-release" && "$BRANCH" != "master" ]]; then 
-            echo "skipping publishing"
-          else
-            # ./build/bump.js is called from within `ci-version-update.sh`, 
-            # get the same updated workspaces but don't edit the package.json's (no -w option)
-            UPDATED=$(./build/bump.js prerelease)
-            ./build/ci-npm-publish.sh "$UPDATED"
-
-            if [[ "$BRANCH" != "master" ]]; then
-              echo "merging to master"
-              git fetch --depth=10 origin master:master
-              git switch master
-              git merge $BRANCH
-              git push
-            fi
-          fi
+          echo $CR_PAT | docker login ghcr.io -u stjude --password-stdin
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPMJS_TOKEN }}
+          CR_PAT: ${{ secrets.PAT }}
+
+      - name: Build and Publish Docker Images
+        run: 
+          sleep 90;
+          cd container;
+          ./build2.sh -r "ghcr.io/stjude/" server;
+          TAG="$(node -p "require('./server/package.json').version")";
+          HASH="$(git rev-parse --short HEAD)";
+          docker push ghcr.io/stjude/ppserver:$TAG-$HASH;
+          docker push ghcr.io/stjude/ppserver:latest;
+
+          ./build2.sh -r "ghcr.io/stjude/" full;
+          TAG="$(node -p "require('./full/package.json').version")";
+          docker push ghcr.io/stjude/ppfull:$TAG-$HASH;
+          docker push ghcr.io/stjude/ppfull:latest;
