--- a/.github/workflows/CD-publish-packages.yml
+++ b/.github/workflows/CD-publish-packages.yml
@@ -1,15 +1,17 @@
-name: "Release Images"
+name: "Publish Packages"
 
 on:
   push:
     branches:
-      - image
-      - fake-image
+      - publish-packages
+      - fake-release
     paths-ignore:
       - '**.md'
       - '**.txt'
       - '.**ignore'
       - 'docs/**'
+      # TODO: what if package.dependencies, files were updated?
+      # this is meant to avoid triggering the on.push event for the version bump
       - '**package*.json'
 
   workflow_dispatch:
@@ -18,8 +20,10 @@ on:
         type: string
         description: Build secret
 
+  workflow_call: {}
+
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -35,7 +39,7 @@ jobs:
           fi 
 
       - name: Check user permission
-        if: github.event_name == "workflow_dispatch"
+        if: github.event_name == 'workflow_dispatch'
         id: check
         uses: scherermichael-oss/action-has-permission@master
         with:
@@ -44,7 +48,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Exit if user doesn't have write permission
-        if: github.event_name == "workflow_dispatch"
+        if: github.event_name == 'workflow_dispatch'
         run: |
           if [ "${{ steps.check.outputs.has-permission }}" = "false" ]; then
             echo "Only users with write permission are allowed to execute this workflow."
@@ -65,37 +69,45 @@ jobs:
           node-version: '16'
           registry-url: 'https://registry.npmjs.org'
           scope: '@sjcrh'
-      - run: npm ci
+
+      - name: ⚡ Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.OS }}-npm-cache-
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run version bump
         run: |
-          VERTYPE=prerelease
+          VERTYPE=prerelease # default
           NOTES=$(node ./build/changeLogGenerator.js -u)
           if [[ "$NOTES" == *"Features:"* ]]; then
             VERTYPE=minor
           elif [[ "$NOTES" == *"Fixes:"* ]]; then
             VERTYPE=patch
           fi
-          . ./build/ci-version-update.sh $VERTYPE -w
-          # !!! --- merge back to master --- !!!
+          # initial dot makes the variables of the call script in-scope
+          . ./build/ci-version-update.sh $VERTYPE -w -x=container
+          echo "UPDATED=$UPDATED" >> $GITHUB_ENV
 
-      - name: Login to GitHub Container Registry
+      - name: Publish packages
         run: |
-          echo $CR_PAT | docker login ghcr.io -u stjude --password-stdin
+          BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          if [[ "$BRANCH" != "publish-packages" && "$BRANCH" != "release-chain" && "$BRANCH" != "master" && ${{ github.event_name }} != 'workflow_dispatch' ]]; then 
+            echo "skipping publishing"
+          else
+            ./build/ci-npm-publish.sh "$UPDATED"
+
+            if [[ "$BRANCH" != "master" ]]; then
+              echo "merging to master"
+              git fetch --depth=10 origin master:master
+              git switch master
+              git merge $BRANCH
+              git push
+            fi
+          fi
         env:
-          CR_PAT: ${{ secrets.PAT }}
-
-      - name: Build and Publish Docker Images
-        run: 
-          sleep 90;
-          cd container;
-          ./build2.sh -r "ghcr.io/stjude/" server;
-          TAG="$(node -p "require('./server/package.json').version")";
-          HASH="$(git rev-parse --short HEAD)";
-          docker push ghcr.io/stjude/ppserver:$TAG-$HASH;
-          docker push ghcr.io/stjude/ppserver:latest;
-
-          ./build2.sh -r "ghcr.io/stjude/" full;
-          TAG="$(node -p "require('./full/package.json').version")";
-          docker push ghcr.io/stjude/ppfull:$TAG-$HASH;
-          docker push ghcr.io/stjude/ppfull:latest;
+          NODE_AUTH_TOKEN: ${{ secrets.NPMJS_TOKEN }}
