--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -27,6 +27,12 @@ serde_json="^1.0.88"
 num = "^0.4.1"
 csv = "^1.2.2"
 #r_mathlib="^0.2.0" # Uncomment this line to activate DE expression app for high sample sizes
+polars = { version = "0.32.1", features = ["lazy", "bigidx", "dtype-decimal"]}
+tokio = { version="1", features = ["full"] }
+reqwest = "0.11"
+flate2 = "1"
+futures = "0.3"
+
 
 
 [profile.release]
@@ -62,6 +68,10 @@ path="src/sv.rs"
 [[bin]]
 name="cluster"
 path="src/cluster.rs"
+
+[[bin]]
+name="gdcmaf"
+path="src/gdcmaf.rs"
 
 #[[bin]]
 #name="wilcoxon"
