use pre* version type based on the branch name, and do not use the commit hash in the tag, but delete/re-tag in pre* version types

--- a/.github/workflows/CD-publish-app-image.yml
+++ b/.github/workflows/CD-publish-app-image.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Run version bump
         run: |
-          . ./build/ci-version-update.sh $VERTYPE -w
+          ./build/ci-version-update.sh $VERTYPE -w
           # !!! --- merge back to master --- !!!
 
       - name: Login to GitHub Container Registry
