--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.1",
+    "@types/d3": "^7.4.3",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.7.1",
