--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "baseUrl": "./",
   },
-  "include": ["./**/*.ts"]
+  "include": ["./**/*.ts"],
+  "exclude": ["./**/*.type.spec.ts"]
 }
