--- a/.github/workflows/CI-unit.yml
+++ b/.github/workflows/CI-unit.yml
@@ -43,15 +43,17 @@ jobs:
       - name: Run ESLint
         run: npx eslint . --ext .ts
 
-      - name: Run tsc
-        run: npx tsc --noEmit --esModuleInterop --allowImportingTsExtensions
-
       - name: Copy serverconfig.json to root
         run: |
           cd server/test/
           node -e 'const fs = require("fs"); const serverconfig = JSON.parse(fs.readFileSync("serverconfig.json")); tpmasterdir = "/home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/server/test/tp"; fs.writeFileSync("data.json", JSON.stringify(serverconfig));'
           TPMASTERDIR=$(node -p "require('./serverconfig.json').tpmasterdir")
           mv serverconfig.json ../../
+
+      - name: Run tsc
+        run: |
+          cd server && npm run checkers && cd ..
+          npx tsc --noEmit --esModuleInterop --allowImportingTsExtensions
 
       - name: Create server cache folder
         run: mkdir server/cache
