install glob in the deps image CI  as required for the bump script

--- a/.github/workflows/CD-publish-deps-image.yml
+++ b/.github/workflows/CD-publish-deps-image.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Build image
         run: |
+          npm install glob
           cd container
           ./version.sh deps
 
