image v.35.1-6b2fa4c1d server=2.35.1 front=2.35.1

--- a/.github/workflows/CD-publish-deps-image.yml
+++ b/.github/workflows/CD-publish-deps-image.yml
@@ -80,6 +80,8 @@ jobs:
 
             echo "merging to master"
             git fetch --depth=10 origin master:master
+            # TODO: fix the following error on CI
+            # fatal: refusing to fetch into branch 'refs/heads/master' checked out at '/home/runner/work/proteinpaint/proteinpaint'
             git switch master
             git merge $BRANCH
             git push
