--- a/.github/workflows/CD-publish-app-image.yml
+++ b/.github/workflows/CD-publish-app-image.yml
@@ -87,6 +87,8 @@ jobs:
           if [[ "$MODE" == "-w" ]]; then
             echo "merging to master"
             git fetch --depth=10 origin master:master
+            # TODO: fix the following error on CI
+            # fatal: refusing to fetch into branch 'refs/heads/master' checked out at '/home/runner/work/proteinpaint/proteinpaint'
             git switch master
             git merge $BRANCH
             git push
