--- a/container/deps/Dockerfile
+++ b/container/deps/Dockerfile
@@ -31,6 +31,7 @@ RUN apt-get update && apt-get install -y \
 	sqlite3 libsqlite3-dev \
 	g++ \
     pkg-config \
+    clang \
 	## clean up
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/ \
