--- a/.github/workflows/CD-publish-deps-image.yml
+++ b/.github/workflows/CD-publish-deps-image.yml
@@ -77,12 +77,18 @@ jobs:
             docker push ghcr.io/stjude/ppfull:$TAG
             docker push ghcr.io/stjude/ppserver:latest
             docker push ghcr.io/stjude/ppfull:latest
-
-            echo "merging to master"
-            git fetch --depth=10 origin master:master
-            # TODO: fix the following error on CI
-            # fatal: refusing to fetch into branch 'refs/heads/master' checked out at '/home/runner/work/proteinpaint/proteinpaint'
-            git switch master
-            git merge $BRANCH
-            git push
+          
+            if [[ "$BRANCH" != "master" ]]; then
+              echo "merging to master"
+              git fetch --depth=10 origin master:master
+              git switch master
+              git merge $BRANCH
+            fi
+            
+            git config --global user.email "PPTeam@STJUDE.ORG"
+            git config --global user.name "PPTeam CI"
+            git add deps/package.json
+            git commit -m "Update deps version to $TAG"
+            git push origin master
+          
           fi
