--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,3 +1,6 @@
+[features]
+test = ["dep:bgzip"]
+
 [package]
 name = "bam"
 version = "0.1.0"
@@ -9,9 +12,10 @@ autobins = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cfg-if = "0.1"
 kodama = "0.3"
 rayon = "1.7.0"
-bgzip = "0.3.1"
+bgzip = {version = "0.3.1", optional = true}
 petgraph = "0.6.3"
 ndarray = "0.15.6"
 nalgebra = {version = "0.32.2", features = ["serde-serialize"]}
@@ -32,8 +36,6 @@ tokio = { version="1", features = ["full"] }
 reqwest = "0.11"
 flate2 = "1"
 futures = "0.3"
-
-
 
 [profile.release]
 lto = "fat"
