--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "baseUrl": "./",
   },
+  "types": ["node"],
   "include": ["./**/*.ts"],
   "exclude": ["./**/*.type.spec.ts"]
 }
