--- a/augen/tsconfig.json
+++ b/augen/tsconfig.json
@@ -2,13 +2,15 @@
   "compilerOptions": {
     "module": "node16",
     "moduleResolution": "node16",
-    "esModuleInterop": true,
+    "target": "es2020",
     "baseUrl": "./",
-    "allowImportingTsExtensions": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
     "noImplicitAny": false
   },
+  "include": [
+    "**/checkers/index.ts"
+  ],
   "exclude": [
     "node_modules",
     "**/*+(.spec|.e2e).ts"
