--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "tape": "^5.2.2",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.0.2",
+    "tsx": "^4.7.1",
     "typedoc": "^0.24.8",
     "typescript": "^5.0.3",
     "typia": "^4.1.14",
