Upgraded rust-bio version to remove warning

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -19,7 +19,7 @@ plotters = "0.3.4"
 colorgrad = "0.6.2"
 statrs = "^0.16.0"
 fishers_exact="^1.0.1"
-bio = "^0.39"
+bio = "1.5.0"
 bigtools = "^0.1.11"
 libmath = "^0.2.1"
 json = "^0.12.4"
